# rica-server

./: Makefile  README.md  __init__.py  demo.ipynb  example.py  exceptions.py  pyproject.toml  router.py  server.py
.github/workflows/: ci.yml  pypi.yml
connector/: __init__.py  _adapter.py  transformers_adapter.py
demo/: example.py  multithread_example.py
docs/: README_en.md  README_zh.md
docs/en/: CONTRIBUTING.md  DEVELOPMENT.md  README.md
docs/zh/: CONTRIBUTING.md  DEVELOPMENT.md  README.md
rica/: __init__.py  config.py  exceptions.py  router.py  server.py
rica/adapter/: __init__.py  base.py  transformers_adapter.py
rica/adapters/: __init__.py  base.py  transformers.py  transformers_adapter.py
rica/connector/: __init__.py  _adapter.py  transformers_adapter.py
rica/core/: application.py  executor.py  thread_manager.py  whiteboard.py
rica/utils/: __init__.py  package_loader.py  parser.py  prompt.py  server.py  validation.py
tests/core/: test_application.py  test_complex_scenarios.py  test_package_loading.py  test_reasoning_thread.py
tests/utils/: test_validation.py
