[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rica-server"
version = "0.0.1dev2"
description = "Multi-threaded Reasoning for Large Language Models"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "kaokao221", email = "kaokao221@outlook.com" }]
license = "GPL-3.0-only"
keywords = ["llms", "pytorch", "nlp"]

dependencies = [
    "jinja2",
    "jsonschema"
]

[project.optional-dependencies]
pt = [
  "transformers",
  "torch",
  "timm",
  "accelerate",
  "hf_xet"
]
dev = [
    "pytest"
]

[project.urls]
Repository = "https://github.com/rica-team/rica-server.git"

[tool.setuptools]
packages = ["rica", "rica.adapters", "rica.core", "rica.utils"]

[tool.black]
line-length = 100
target-version = ["py312"]
include = "\\.(py|pyi)$"

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [
  ".git",
  ".venv",
  "dist",
  "build",
  "rica_server.egg-info",
]

[tool.ruff.lint]
select = [
  "E",  # pycodestyle errors
  "F",  # pyflakes
  "I",  # isort
]
ignore = []
